# image_editor

./: Cargo.toml  package-lock.json  package.json
.github/workflows/: build.yaml
src/: browser.rs  editor.rs  engine.rs  lib.rs
src/browser/: anchor.rs  button.rs  canvas.rs  file_reader.rs  image.rs  input.rs  media_query_list.rs
src/editor/: back_and_forward.rs  binarization.rs  image_data_list.rs  input.rs  mode_manager.rs  save.rs  theme.rs
src/engine/: anchor.rs  button.rs  canvas.rs  image.rs  image_data.rs  input.rs  label.rs  rect.rs  renderer.rs
static/: index.html  styles.css
