# You must change these to your own details.
[package]
name = "image_editor"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.5.0"
authors = ["kota"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.87"

console_error_panic_hook = "0.1.7"
anyhow = "1.0.75"
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlAnchorElement",
    "HtmlLabelElement",
    "CanvasRenderingContext2d",
    "Window",
    "Document",
    "Event",
    "FileList",
    "File",
    "FileReader",
    "ImageData",
    "CssStyleDeclaration",
    "DomRect",
    "DomTokenList",
    "MediaQueryList",
]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
js-sys = "0.3.22"
